[gd_scene load_steps=12 format=3 uid="uid://d3hlnv1abs2r7"]

[ext_resource type="Script" uid="uid://bfx8m0c83fjau" path="res://Scripts/Menus/settings_menu.gd" id="1_cl26u"]
[ext_resource type="PackedScene" uid="uid://7vpivn78orul" path="res://Scenes/Menus/UI Elements/mouse_slider.tscn" id="1_mfqmm"]
[ext_resource type="Texture2D" uid="uid://evfkd2wfxlag" path="res://Assets/2D/Icons/SettingsNormal.png" id="2_ks0yy"]
[ext_resource type="Texture2D" uid="uid://felhqg40v6pd" path="res://Assets/2D/Icons/SettingsPressed.png" id="3_0hoxr"]
[ext_resource type="Texture2D" uid="uid://ci6th7jydhn8p" path="res://Assets/2D/Icons/SettingsHovered.png" id="4_pitel"]
[ext_resource type="Theme" uid="uid://bkrj8hvnt7520" path="res://Misc/Themes/ui_theme.tres" id="5_0hoxr"]
[ext_resource type="AudioStream" uid="uid://ojec4xx2xwji" path="res://Assets/Audio/SFX/click.wav" id="6_ks0yy"]
[ext_resource type="Texture2D" uid="uid://de8r0q7c236u7" path="res://Assets/2D/interact_symbol.png" id="6_pitel"]

[sub_resource type="Animation" id="Animation_ks0yy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Scaler:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_cl26u"]
resource_name = "turn"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Scaler:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0hoxr"]
_data = {
&"RESET": SubResource("Animation_ks0yy"),
&"turn": SubResource("Animation_cl26u")
}

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cl26u")

[node name="OpenButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 116.0
offset_top = 78.0
offset_right = 180.0
offset_bottom = 142.0
scale = Vector2(2, 2)
pivot_offset = Vector2(32, 32)
texture_normal = ExtResource("2_ks0yy")
texture_pressed = ExtResource("3_0hoxr")
texture_hover = ExtResource("4_pitel")

[node name="ButtonAnims" type="AnimationPlayer" parent="OpenButton"]
libraries = {
&"": SubResource("AnimationLibrary_0hoxr")
}

[node name="Scaler" type="Control" parent="."]
anchors_preset = 0
offset_left = 170.0
offset_top = 78.0
offset_right = 170.0
offset_bottom = 78.0
scale = Vector2(1e-05, 1)
theme = ExtResource("5_0hoxr")

[node name="ControlsTitle" type="Label" parent="Scaler"]
layout_mode = 0
offset_left = 1005.0
offset_top = -7.0
offset_right = 1350.0
offset_bottom = 97.0
text = "Controls:"

[node name="ControlsList" type="Label" parent="Scaler/ControlsTitle"]
layout_mode = 0
offset_left = -166.0
offset_top = 128.0
offset_right = 657.0
offset_bottom = 505.0
text = "WASD - Movement
Esc. - Exit
Left Click or \"E\" - Interact

     - If you see this symbol,
it means you can interact
with something nearby"

[node name="InteractSymbol" type="Sprite2D" parent="Scaler/ControlsTitle/ControlsList"]
position = Vector2(52, 416)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_pitel")

[node name="MouseSlider" parent="Scaler" instance=ExtResource("1_mfqmm")]
layout_mode = 0
offset_left = 85.0
offset_top = -41.0
offset_right = 944.0
offset_bottom = 88.0

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ks0yy")
volume_db = -15.0
pitch_scale = 2.0

[connection signal="pressed" from="OpenButton" to="." method="_on_open_button_pressed"]
